# sim

./: .gitignore  .gitmodules  CMakeLists.txt  ComputeFlow.m  Flow.py  Grid.py  Gross_Neveu.py  IntegrationFunctions.py  Mean_Field_Tests.py  boundary_comparison.ipynb  c_Computation.py  c_Computation_Data.py  c_Grid.py  c_Gross_Neveu.py  c_Return_Data.py  c_Tests.ipynb  calculate_numeric_tests.py  calculate_phase_diagram.py  calculate_single_flow.sh  computation_interface.py  computation_library.c  compute_couplings.py  compute_observables.py  compute_phase_diagram.py  create_job.py  cutoff_test.py  cutoff_test_T=0.0125_mu=0.0.sh  cutoff_test_T=0.0125_mu=0.6.sh  cutoff_test_T=0.35_mu=0.0.sh  cutoff_test_T=0.35_mu=0.4.sh  cutoff_tests.py  data-visualizer.ipynb  dataClass.py  deltaSigma_test.py  deltaSigma_test_T=0.0125_mu=0.0.sh  deltaSigma_test_T=0.0125_mu=0.6.sh  deltaSigma_test_T=0.0125_mu=0.sh  deltaSigma_test_T=0.35_mu=0.0.sh  deltaSigma_test_T=0.35_mu=0.4.sh  detect_missing_files.py  (+27 more)
.cache/clangd/index/: all_tests.c.515F43A789B248F1.idx  computation_data.c.DF4848E4F67714B2.idx  computation_data.h.3BB9DFD14C2CC3A8.idx  computation_library.c.3D4F2C04EA34ACF6.idx  grid.c.09102E8D8730BCA3.idx  grid.h.39D1E2B3F9527982.idx  gross_neveu.c.6597741AAB5439A1.idx  physics.h.F36FBF1CC457DC1B.idx  return_data.c.896BE276C52CC6AF.idx  return_data.h.30FD3BA2404EFC46.idx  test_computation_data.c.347A5557F10F888D.idx  test_grid.c.3976833D3E743366.idx  test_return_data.c.37782960B380EC7D.idx
1+1_test_files/: flow_MF_T=0.00625,mu=0.6.json  flow_MF_T=0.0125,mu=0.6.json  flow_MF_T=0.1,mu=0.1.json  flow_N=2,T=0.1,mu=0.1.json
c_code/: computation_data.c  computation_data.h  computation_library.c  gross_neveu.c  physics.h  return_data.c  return_data.h
plotting_scripts/: dataClass.py
python_files/: Gross_Neveu.py  compute_observables.py  data_class.py  grid_creator.py
python_files/gross_neveu/: Gross_Neveu.py  __main__.py  compute_observable.py  mean_field_computation.py
python_files/gross_neveu/couplings/: __main__.py  compute_couplings.py  couplings_io.py
python_files/interfaces/: c_Computation.py  c_Computation_Data.py  c_Grid.py  c_Gross_Neveu.py  c_Return_Data.py  c_compute_diffusion.py
python_files/numeric_tests/: Lambda_max_test.py  __main__.py  grid_resolution_test.py  infrared_cutoff_test.py  inhomogenious_grid_test.py  observables_evaluation.py  sigma_max_test.py
python_files/phase_diagram/: __main__.py  analytic_results.py  computation_function.py  compute_observables.py  compute_phase_boundary.py  contour_computations.py  file_io.py  phase_boundary.py  phase_diagram_computation.py  plot_phase_diagram.py  plot_single_potential.py  plots_for_poster.py  save_phase_diagram.py
slurm_scripts/: compute_phase_diagram.sh  run_all_couplings.sh  run_coupling.sh  run_phase_boundary_computation.sh  run_phase_lp_computation.sh
src/: CMakeLists.txt  computation_data.c  computation_data.cpp  computation_library.c  computation_library.cpp  compute_physics.cpp  grid.c  grid.cpp  grid.h  gross_neveu.c  helpers.c  live_plotting.cpp  return_data.c  return_data.cpp
src/include/: computation_data.h  compute_physics.h  grid.h  helpers.h  live_plotting.h  physics.h  return_data.h
src/lib/plotting_scripts/: CMakeLists.txt  live_plotting.cpp  u_plotting.cpp
src/lib/plotting_scripts/include/: live_plotting.h  u_plotting.h
src/models/: gross_neveu.c  gross_neveu.cpp  gross_neveu_vacuum.c  gross_neveu_vacuum.cpp
tests/: CMakeLists.txt  all_tests.c  test_computation_data.cpp  test_grid.c  test_grid.cpp  test_return_data.cpp
tests_python/: test_Gross_Neveu_Model.py  test_coupling_io.py  test_non_equi_distante_grid.py
